--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -2,5 +2,7 @@ version: '3'
 services:
   my-service:
     image: christelle-image
-  ports:
-      - "5000:8080"
+    ports:
+        - "5000:8080"
+    environment:
+    - BACKEND_ENV=production
